@@ -12,7 +12,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: heur_nlp.c,v 1.76 2010/08/30 16:50:07 bzfwinkm Exp $"
+#pragma ident "@(#) $Id: heur_nlp.c,v 1.77 2010/09/01 09:11:16 bzfviger Exp $"
 
 /**@file    heur_nlp.c
  * @ingroup PRIMALHEURISTICS
@@ -41,7 +41,7 @@
 #define HEUR_DESC             "primal heuristic that performs a local search in an NLP after fixing integer variables"
 #define HEUR_DISPCHAR         'Q'
 #define HEUR_PRIORITY         -2000000
-#define HEUR_FREQ             1
+#define HEUR_FREQ             -1
 #define HEUR_FREQOFS          0
 #define HEUR_MAXDEPTH         -1
 #define HEUR_TIMING           SCIP_HEURTIMING_AFTERNODE
